a few UI revision

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic
-title: "Ning's Land" 
+title: "Step By Step" 
 subtitle: Share ideas and interesting findings in my life. 
 welcome_message: Formerly works for Microsoft and now Senior Software Engineer for Skytap. 
 description:  I am a software engineer focus on backend service and architecture design. 
